--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -96,3 +96,12 @@
                color: black;
           background: whitesmoke;
 }
+.Filter-form {
+               width: 300px;
+              height: 100px;
+       border-radius: 20px;
+              border: 3px solid black;
+          background: white;
+}
+
+   
