--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,7 +5,8 @@
 }
 .App {
           text-align: center;
-    background-color: rgb(0, 0, 0);
+          min-height: 200vh;
+    background-color: black;
 }
 .CounterBlock {
              display: flex;
@@ -97,11 +98,38 @@
           background: whitesmoke;
 }
 .Filter-form {
-               width: 300px;
+             display: flex;
+     justify-content: space-around;
+         align-items: center;
+          margin-top: 20px;
+             padding: 0 30px;
+               width: 100%;
               height: 100px;
        border-radius: 20px;
+          box-shadow: 0px 0px 20px 5px rgba(230, 230, 230, 0.719);
               border: 3px solid black;
-          background: white;
+          background: rgba(59, 48, 48, 0.733);
 }
-
+.Filter-form:hover {
+              border: 3px solid rgba(73, 45, 21, 0.76);
+          box-shadow: 0px 0px 20px 5px rgba(230, 230, 230, 0.863);
+          background: rgba(59, 48, 48, 0.932);
+}
+.Select {
+     appearance: none;
+ text-transform: uppercase;
+     text-align: center;
+ letter-spacing: 1px;
+        padding: 15px;
+  border-radius: 20px;
+    font-weight: 700;
+     background: #f4cd8ab9;
+}    
+.Select:focus {
+     background: #f4cd8ae5;
+}
+.Error {
+     margin-top: 50px;
+          color: red;
+}
    
