create Page Posts by Id

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -91,19 +91,24 @@
 .Post:hover {
           box-shadow: 0px 0px 20px 5px rgba(57, 187, 57, 0.719);
 }
-.Post-content h3 {
+.Post div h3 {
           text-align: left;
 }
 .Post-content-title {
       text-transform: uppercase;
 }
-.Post-content span {
+.Post div span {
              display: block;
+          text-align: center;
               margin: 10px;
              padding: 10px;
        border-radius: 30px;
                color: black;
           background: whitesmoke;
+}
+.Post-btns {
+             display: flex;
+     justify-content: space-between;
 }
 .Filter-form {
              display: flex;
@@ -124,53 +129,126 @@
           background: rgba(59, 48, 48, 0.932);
 }
 .Select {
-     appearance: none;
- text-transform: uppercase;
-     text-align: center;
- letter-spacing: 1px;
-        padding: 15px;
-  border-radius: 20px;
-    font-weight: 700;
-     background: #f4cd8ab9;
+          appearance: none;
+      text-transform: uppercase;
+          text-align: center;
+      letter-spacing: 1px;
+             padding: 15px;
+       border-radius: 20px;
+         font-weight: 700;
+          background: #f4cd8ab9;
 }    
 .Select:focus {
-     background: #f4cd8ae5;
+          background: #f4cd8ae5;
 }
 .Error {
-     margin-top: 50px;
-          color: red;
+          margin-top: 50px;
+               color: red;
 }
 .NavBar {
-       position: fixed;
-        display: flex;
-justify-content: space-around;
-    align-items: center;
-           left: 0;
-          right: 0;
-     min-height: 50px;
-        padding: 10px 0;
-     box-shadow: 0 0 20px 10px rgba(82, 60, 60, 0.712);
-     background: rgba(3, 0, 0, 0.87);
-     border-bottom-left-radius: 20px;
-         border-end-end-radius: 20px;
+            position: fixed;
+             display: flex;
+     justify-content: space-around;
+         align-items: center;
+                left: 0;
+               right: 0;
+          min-height: 50px;
+             padding: 10px 0;
+          box-shadow: 0 0 20px 10px rgba(82, 60, 60, 0.712);
+          background: rgba(3, 0, 0, 0.87);
+      border-bottom-left-radius: 20px;
+          border-end-end-radius: 20px;
+
 }
 .Navbar-item {
-text-decoration: none;
- text-transform: uppercase;
-     text-align: center;
-         height: 40px;
-        padding: 9px 15px;
-    font-weight: 600;
- letter-spacing: 1px;
-  border-radius: 20px;
-         border: 2px solid whitesmoke; 
-     box-shadow: 0 0 8px 5px rgba(20, 135, 143, 0.425);
-          color: whitesmoke;
-     background: rgba(32, 21, 21, 0.61);
-     transition: all 0.2s ease-in-out;
+     text-decoration: none;
+      text-transform: uppercase;
+          text-align: center;
+              height: 40px;
+             padding: 9px 15px;
+         font-weight: 600;
+      letter-spacing: 1px;
+       border-radius: 20px;
+              border: 2px solid whitesmoke; 
+          box-shadow: 0 0 8px 5px rgba(20, 135, 143, 0.425);
+               color: whitesmoke;
+          background: rgba(32, 21, 21, 0.61);
+          transition: all 0.2s ease-in-out;
+             z-index: 1000;
 }
 .Navbar-item:hover {
- letter-spacing: 2px;
-         border: 2px solid rgba(57, 187, 57, 0.719); 
-     box-shadow: 0 0 8px 5px rgba(57, 187, 57, 0.719);
+      letter-spacing: 2px;
+              border: 2px solid rgba(57, 187, 57, 0.719); 
+          box-shadow: 0 0 8px 5px rgba(57, 187, 57, 0.719);
+}
+
+.PostById {
+            position: relative;
+                 top: 100px;
+                left: 50%;
+           transform: translateX(-50%);
+          box-shadow: 0px 0px 20px 5px rgba(57, 187, 57, 0.719);
+}
+.Block-ComById {
+            position: relative;
+               width: 80%;
+                top: 150px;
+               left: 50%;
+          transform: translateX(-50%);
+            padding: 30px;
+      border-radius: 25px;
+         background: rgba(255, 255, 255, 0.753);
+}
+.Block-ComById h3 {
+         text-align: center;
+     text-transform: uppercase;
+       word-spacing: 4px;
+      border-radius: 20px;
+            padding: 15px;
+      margin-bottom: 40px;
+          font-size: 20px;
+         box-shadow: 0 0 8px 5px rgba(0, 0, 0, 0.719);
+         background: rgb(75, 43, 43);
+}
+.ComById {
+     margin-bottom: 35px;
+           padding: 10px;
+     border-radius: 10px;
+        box-shadow: 0 0 8px 5px rgba(0, 0, 0, 0.719);
+             color: whitesmoke;
+        background: black;
+        border-top-left-radius: 20px;
+    border-bottom-right-radius: 30px;
+}
+.ComById::before {
+          content: '';
+          display: block;
+         position: relative;
+              top: -30px;
+             left: -30px;
+    border-radius: 50%;
+            width: 40px;
+           height: 40px;
+           border: 1px solid rgba(0, 0, 0, 0.582);
+       background: rgb(202, 164, 164);
+}
+.ComById h2 {
+       margin-top: -25px;
+    margin-bottom: 5px;
+}
+.ComById div span {    
+         display: block;
+         padding: 8px;
+          margin: 8px 5px;
+   border-radius: 20px;
+           color: black;
+      background: rgba(241, 226, 226, 0.973);
+}
+.ComById div span:nth-child(1){
+     text-transform: uppercase;
+         text-align: center;
+         font-weight: 600;
+}
+.ComById div span::first-letter {
+     text-transform: uppercase;
 }
