--- a/src/components/UI/popup/Popup.module.css
+++ b/src/components/UI/popup/Popup.module.css
@@ -11,11 +11,17 @@
      display: block;
 }
 .PopupContent {
-    position: absolute;
-         top: 50%;
-        left: 50%;
-      margin: -150px 0 0 -150px;
-       width: 300px;
-      height: 300px;
-  background: white;
+        display: flex;
+       position: absolute;
+ flex-direction: column;
+    align-items: center;
+justify-content: space-around;
+            top: 50%;
+           left: 50%;
+         margin: -150px 0 0 -150px;
+          width: 300px;
+         height: 300px;
+        padding: 30px; 
+  border-radius: 20px;
+     background: #f4cd8ab9;
 }
