--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,7 +6,7 @@
 .App {
           text-align: center;
           min-height: 100vh;
-         padding-top: 60px;
+             padding: 60px 0;
     background-color: black;
 }
 .App-main {
