--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -407,7 +407,11 @@
                  left: 5%;
                   top: 20%;
                 color: rgba(211, 9, 9, 0.644);
-           background: none;   
+           background: none;  
+          
+}
+.AuthPage-Error span {
+          transition: all 0.5s ease-in-out; 
 }
 .AuthPage-Error-Anim {
            animation: erroranim 0.7s ;
