--- a/src/components/UI/loader/Loader.module.css
+++ b/src/components/UI/loader/Loader.module.css
@@ -3,7 +3,7 @@
              display: flex;
          align-items: center;
      justify-content: center;
-              margin: 170px auto;
+              /* margin: 170px auto; */
                  top: 50%;
                 left: 50%;
            transform: translateX(-50%)
