--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -60,10 +60,11 @@
           box-shadow: 0 0 8px 4px rgb(0, 0, 0);           
 }
 .interaction span {
+             display: inline-block;
             position: absolute;
                 left: 50%;
            transform: translateX(-50%);
-             display: inline-block;
+              height: 600px;
                color: rgba(59, 48, 48, 0.2);
            font-size: 600px;
 }
@@ -74,7 +75,7 @@
                width: 100%;
              padding: 30px;
        border-radius: 20px;
-                 top: 50%;
+                 top: 350px;
           background: rgba(59, 48, 48, 0.8);
 }
 .MyInp-form {
@@ -164,6 +165,9 @@
 }    
 .Select:focus {
           background: #f4cd8ae5;
+}
+.Select:hover {
+           background: #f4cd8ae5;
 }
 .Error {
           margin-top: 50px;
@@ -365,6 +369,9 @@
                border: 1px solid rgba(21, 231, 13, 0.432);
            background: #f4cd8ab9;
 }   
+.CrtPost-btn:hover {
+           background: #f4cd8ae0;
+}
 .CrtPost-btn-active {
             animation: crt-post 1s linear  infinite;
            transition: all 2s linear;
@@ -417,9 +424,9 @@
              position: absolute;
                   top: 50%;
                  left: 50%;
-               margin: -350px 0 0 -100px;
+               margin: -320px 0 0 -80px;
                 width: 30px;
-               height: 700px;
+               height: 600px;
                border-radius: 50%;
             transform: rotate(30deg);
            box-shadow: 0 0 50px 3px rgba(245, 245, 245, 0.13);
@@ -427,7 +434,7 @@
               z-index: -1;
 }
 .Log::after {
-               margin: -350px 0 0 20px;
+               margin: -290px 0 0 50px;
 }
 .AuthPage-Error {
        text-transform: uppercase;
@@ -457,4 +464,21 @@
     100% {
             transform: translateX(0px) scale(1);
     }
+}
+.AboutAuth-Content {
+           text-align: center;
+              padding: 30px 50px;
+           margin-top: 100px;
+}
+.AboutAuth-Content span:nth-child(1){
+               display: block;
+        text-transform: uppercase;
+         margin-bottom: 50px;
+             font-size: 20px;
+                 color: wheat;
+}                      
+.AboutAuth-Content span:nth-child(2){
+          word-spacing: 2px;
+             font-size: 18px;
+                 color: rgb(247, 236, 215);
 }
